# src/controllers/content.controller.ts
@@ -1,5 +1,9 @@
 import { Get, Path, Query, Route } from "tsoa";
-import { NotImplemented } from "../models/httpError.ts/index";
+import { NotImplemented } from "../models/http.error.ts/index";
+import { CmsService } from "../services/cms.service";
+
+const host = "https://dev.prod.cms.developer.if-insurance.com/// ";
+const cmsService = new CmsService({ host });
 
 interface ApiResponse<T> {
   status: number;
@@ -19,35 +23,38 @@ interface GetPagesTreeResponseBody {
   count: number;
 }
 
-@Route("api/content")
+@Route("/content")
 export default class ContentController {
   @Get("{id}")
   public async getContent(
     @Path() id: number,
-    @Query() editmode?: boolean
-  ): Promise<ApiResponse<Content>> {
-    throw new NotImplemented();
+    @Query("editmode") editmode?: boolean
+  ): Promise<ApiResponse<any>> {
+    console.log("Yo");
+    const content = await cmsService.getContent(id, { editmode });
+    return { status: 200, body: content };
   }
 
   @Get("{id}/children")
   public async getContentChildren(
     @Path() id: number,
     @Query() editmode?: boolean
-  ): Promise<ApiResponse<ContentResponse[] | null>> {
-    throw new NotImplemented();
+  ): Promise<ApiResponse<any[]>> {
+    const content = await cmsService.getContentChildren(id, { editmode });
+    return { status: 200, body: content };
   }
 
   @Get("/pages")
   public async allPages(
     @Query() editmode?: boolean
-  ): Promise<ApiResponse<ContentResponse[] | null>> {
+  ): Promise<ApiResponse<any>> {
     throw new NotImplemented();
   }
 
   @Get("/pages/tree")
   public async allPagesAsTree(
     @Query() editmode?: boolean
-  ): Promise<ApiResponse<GetPagesTreeResponseBody>> {
+  ): Promise<ApiResponse<any>> {
     throw new NotImplemented();
   }
 
@@ -55,7 +62,7 @@ export default class ContentController {
   public async getPage(
     @Path() id: number,
     @Query() editmode?: boolean
-  ): Promise<ContentResponse[] | null> {
+  ): Promise<any> {
     throw new NotImplemented();
   }
 
@@ -63,7 +70,13 @@ export default class ContentController {
   public async getPageChildren(
     @Path() id: number,
     @Query() editmode?: boolean
-  ): Promise<ContentResponse[] | null> {
+  ): Promise<any> {
     throw new NotImplemented();
+  }
+
+  @Get("sites")
+  public async getWebsites(): Promise<any> {
+    const content = await cmsService.getWebsites();
+    return { status: 200, body: content };
   }
 }
